# PathFinding

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
FindingPathBackEnd/: CMakeLists.txt  PathfindingServer.cpp  PathfindingServer.h  main.cpp
FindingPathBackEnd/AStart/: AstartLogique.cpp
FindingPathBackEnd/AStart/code/: AstarSolver.cpp
FindingPathBackEnd/AStart/headers/: AstarSolver.h
FindingPathBackEnd/BackendAStart/code/: Node.cpp
FindingPathBackEnd/BackendAStart/headers/: Node.h
FindingPathBackEnd/BackendAStart/test/: mainTest.cpp
FindingPathBackEnd/BackendBFS/: bfs.cpp  bfs.js
FindingPathBackEnd/BackendDijkstra/: DijkstraLogique.cpp
FindingPathBackEnd/BackendDijkstra/code/: DijkstraSolver.cpp
FindingPathBackEnd/BackendDijkstra/headers/: DijkstraSolver.h
FindingPathBackEnd/BackendDijkstra/test/: mainTest.cpp
FindingPathFontEnd/: .dockerignore  Dockerfile  nginx.conf
FindingPathFontEnd/src/: App.js
FindingPathFontEnd/src/components/: Controls.js  Stats.js
FindingPathFontEnd/src/constants/: gridConstants.js
FindingPathFontEnd/src/hooks/: useGrid.js  useMaze.js  useVisualization.js
FindingPathFontEnd/src/loadWASMModule/: loadAStart.js
FindingPathFontEnd/src/utils/: animationUtils.js  gridUtils.js  helpers.js  matrixUtils.js
newapp/: package-lock.json  package.json
newapp/public/: wasm.wasm
newapp/public/wasm/: dijkstra.js  dijkstra.wasm
newapp/src/: App.js
public/wasm/: dijkstra.js
src/: App.css  App.js  loadDijkstra.js
src/components/: Controls.js  Node.css  Node.js  Stats.js
(+17 files in other folders)
